sources += gnome.compile_resources(
    'language-resources',
    files('language.gresource.xml'),
    c_name: 'language'
)

sources += files(
    'cc-common-language.c',
    'cc-common-language.h',
    'cc-language-chooser.c',
    'cc-language-chooser.h',
    'cc-util.c',
    'cc-util.h',
    'gis-welcome-widget.c',
    'gis-welcome-widget.h',
    'gis-language-page.c',
    'gis-language-page.h',
)
